# research

./: .gitignore  clusters.xlsx  pyproject.toml
data/embeddings/: embeddings.pkl
notebooks/: aov_down.ipynb  clustering_queries.ipynb  clustering_queries_v0.ipynb  esg.ipynb  growth_model.ipynb  hierachical_clustering_queries.ipynb  output.xlsx  search_and_recs.ipynb  test.ipynb  test.yaml  torch.ipynb
research/: write_data.py
research/checks/: check_nc_components.py
src/: clustering.py  db.py  embeddings.py  index.html  queries.py  torch_test.py
workspaces/growth_model/templates/: dev.sql  nc_components.sql  nc_components_all_in_one.sql  nc_components_base.sql  nc_components_derived_aggregates.sql  nc_components_derived_aggregates_cummulative.sql  nc_components_derived_aggregates_from_base.sql  nc_components_derived_aggregates_fytd.sql  nc_components_derived_aggregates_v2.sql  nc_components_v2.sql
workspaces/growth_model/templates/macros/: mymacros.jinja
workspaces/growth_model/tests/json/: tests.json
workspaces/growth_model/tests/sql/: test_aggregates_add_up.sql
workspaces/search_and_recs/templates/: basic.sql  queries.sql  queries_for_encoding.sql  queries_for_measuring_cluster_success.sql  queries_success_fail.sql  test.sql
