[tool.poetry]
name = "research"
version = "0.1.0"
description = ""
authors = ["Mark Ingham <mark.ingham@ly.st>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
streamlit = "^1.28.1"
sqlalchemy = "^2.0.25"
snowflake-connector-python = {extras = ["pandas"], version = "^3.6.0"}
yfinance = "^0.2.35"
yesg = "^2.1.1"
click = "^8.1.7"
jinja2-simple-tags = "^0.5.0"
dbt = "^1.0.0.35.25"
pyyaml = "^6.0.1"
matplotlib = "^3.8.3"
transformers = {extras = ["torch"], version = "^4.38.2"}
scikit-learn = "^1.4.1.post1"
memory-profiler = "^0.61.0"
memray = "^1.11.0"
torch = "^2.2.1"
openpyxl = "^3.1.2"
notebook-as-pdf = "^0.5.0"
nbconvert = {extras = ["webpdf"], version = "^7.16.3"}
torchvision = "^0.17.1"
pydqt = "^1.3.9"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
notebook = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
